working on small bugs

--- a/app/assets/stylesheets/NavBar.scss
+++ b/app/assets/stylesheets/NavBar.scss
@@ -178,3 +178,9 @@ input .login-input {
   padding: 14.5px 125px;
   border-bottom: 1px solid gray;
 }
+
+.allfavoritesbutton {
+  display: flex;
+  justify-content: center;
+  margin-top: 13px;
+}
